--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,9 @@ requires-python = ">=3.9"
 dependencies = [
     "pydub>=0.25.1",
     "PyQt6>=6.6.0",
-    "requests>=2.31.0"
+    "requests>=2.31.0",
+    "numpy>=1.26.0",
+    "matplotlib>=3.7.0"
 ]
 
 [project.urls]
