Major streamlining to UI

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,44 @@
-# requirements.txt
-pydub>=0.25.1
-PyQt6>=6.6.0
-requests>=2.31.0
-numpy>=1.26.0
-matplotlib>=3.7.0
+-e git+https://github.com/LeeHunter/Anki-slicer.git@46a4bda54d55258235819f9d3e1c1f716f561bdc#egg=anki_slicer
+black==25.1.0
+build==1.3.0
+certifi==2025.8.3
+charset-normalizer==3.4.3
+click==8.2.1
+contourpy==1.3.3
+cycler==0.12.1
+docutils==0.22
+fonttools==4.59.2
+id==1.5.0
+idna==3.10
+jaraco.classes==3.4.0
+jaraco.context==6.0.1
+jaraco.functools==4.3.0
+keyring==25.6.0
+kiwisolver==1.4.9
+markdown-it-py==4.0.0
+matplotlib==3.10.6
+mdurl==0.1.2
+more-itertools==10.8.0
+mypy_extensions==1.1.0
+nh3==0.3.0
+numpy==2.3.3
+packaging==25.0
+pathspec==0.12.1
+pillow==11.3.0
+platformdirs==4.4.0
+pydub==0.25.1
+Pygments==2.19.2
+pyparsing==3.2.3
+pyproject_hooks==1.2.0
+PyQt6==6.9.1
+PyQt6-Qt6==6.9.2
+PyQt6_sip==13.10.2
+python-dateutil==2.9.0.post0
+readme_renderer==44.0
+requests==2.32.5
+requests-toolbelt==1.0.0
+rfc3986==2.0.0
+rich==14.1.0
+six==1.17.0
+twine==6.2.0
+urllib3==2.5.0
