--- a/test_env/pyvenv.cfg
+++ b/test_env/pyvenv.cfg
@@ -2,4 +2,4 @@ home = /Library/Frameworks/Python.framework/Versions/3.12/bin
 include-system-site-packages = false
 version = 3.12.10
 executable = /Library/Frameworks/Python.framework/Versions/3.12/bin/python3.12
-command = /Users/leehunter/Anki-slicer/venv/bin/python -m venv /Users/leehunter/Anki-slicer/test_env
+command = /Library/Frameworks/Python.framework/Versions/3.12/bin/python3 -m venv /Users/leehunter/Anki-slicer/test_env
