--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ cycler==0.12.1
 docutils==0.22
 fonttools==4.59.2
 id==1.5.0
-idna==3.10
+idna==2.10
 jaraco.classes==3.4.0
 jaraco.context==6.0.1
 jaraco.functools==4.3.0
@@ -37,7 +37,11 @@ python-dateutil==2.9.0.post0
 readme_renderer==44.0
 requests==2.32.5
 requests-toolbelt==1.0.0
-rfc3986==2.0.0
+rfc3986==1.4.0
+httpx==0.13.3
+httpcore==0.9.1
+h11==0.8.1
+sniffio==1.1.0
 rich==14.1.0
 six==1.17.0
 twine==6.2.0
